kubernetes/apps/media/sonarr/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.toskbot.xyz`)
      kind: Rule
      services:
        - name: sonarr
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: sonarr.toskbot.xyz
